deploy/k8s/jupyter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-notebook
  namespace: jupyter-notebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-notebook
  template:
    metadata:
      labels:
        app: jupyter-notebook
    spec:
      containers:
      - name: jupyter-notebook
        image: fodi17/simple_jupyter:latest
        ports:
        - containerPort: 8888
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "2Gi"
            cpu: "2"
        args: ["start-notebook.sh", "--NotebookApp.token=''"]
        volumeMounts:
        - mountPath: /home/jovyan/work
          name: jupyter-storage
      volumes:
      - name: jupyter-storage
        persistentVolumeClaim:
          claimName: jupyter-pvc
