deploy/k8s/jupyter-notebook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook
  namespace: jupyter-notebook
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30000  # Ensure this port is within the 30000-32767 range
  selector:
    app: jupyter-notebook
