deploy/k8s/jupyter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyter-notebook
  namespace: jupyter-notebook
spec:
  type: NodePort
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30000
  selector:
    app: jupyter-notebook
